# fedresurs_scraper

./: .gitignore  Dockerfile  README.md  api.py  config.py  docker-compose.yml  dump.rdb  pyproject.toml  requirements.txt
fedresurs_scraper/: scrapy.cfg
fedresurs_scraper/fedresurs_scraper/: items.py  middlewares.py  pipelines.py  settings.py
fedresurs_scraper/fedresurs_scraper/spiders/: fedres_spider.py
requests_parser/: config.py  db_tables.py  parser.py  routes.py
service/: Dockerfile  requirements.txt
service/parser/: db_tables.py  scraper.py
service/parser/config/: config.py
